Set up automated testing on CircleCI

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,12 @@ skipsdist = true
 [testenv]
 deps =
     .[test]
+    mypy
+    black
 commands =
-    pytest graphene_pydantic --cov-report=term-missing --cov=graphene_pydantic {posargs}
+    pytest tests/ --cov-report=term-missing --cov=graphene_pydantic {posargs}
+    mypy --ignore-missing-imports --no-strict-optional -m graphene_pydantic
+    black --check graphene_pydantic
 
 [testenv:pre-commit]
 basepython=python3.7
