--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,8 @@
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/python:3.7
+      - image: themattrix/tox
     steps:
       - checkout
-      - run:
-          name: Install Tox
-          command: pip install tox
-      - run:
-          name: Tests with Tox
-          command: tox
-
+      - run: tox
