--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,19 @@
 [tox]
 envlist = pre-commit,py{36,37}
-skipsdist = true
+skipsdist = {env:TOXBUILD:false}
 
 [testenv]
 deps =
+    .[dev]
     .[test]
-    mypy
-    black
 commands =
     pytest tests/ --cov-report=term-missing --cov=graphene_pydantic {posargs}
     mypy --ignore-missing-imports --no-strict-optional -m graphene_pydantic
     black --check graphene_pydantic
 
 [testenv:pre-commit]
-basepython=python3.7
+basepython = python3.7
 deps =
     .[dev]
 commands =
-pre-commit {posargs:run --all-files}
+    pre-commit {posargs:run --all-files}
