--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "graphene_pydantic"
-version = "0.1"
+version = "0.0.1"
 description = "Graphene Pydantic integration"
 readme = "README.md"
 repository = "https://github.com/upsidetravel/graphene-pydantic"
@@ -25,9 +25,8 @@ graphene = ">=2.1.3,<3"
 pydantic = ">=0.25,<0.30"
 
 [tool.poetry.dev-dependencies]
-# testing
-pytest = { version = "4.6.3", extras = ["test"] }
-pytest-cov = { version = "4.6.3", extras = ["test"] }
+pytest = "~4.6.3"
+pytest-cov = "~2.7.1"
 tox = "3.7.0"  # sync with tox.ini
 mypy = "0.720"
 black = "19.3b0"
