Move caching to a more useful place

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,17 +23,18 @@ jobs:
           command: |
             poetry install
 
+      - run:
+          name: Run all the testing steps
+          command: |
+            poetry run tox
+
       # Save the specified path as a cache. This is the path Poetry uses to install the dependencies
       # So if you don't install anything new, this folder won't change and the cache will be effective
       - save_cache:
           key: deps-{{ checksum "poetry.lock" }}
           paths:
             - /home/circleci/.cache/pypoetry/virtualenvs
-
-      - run:
-          name: Run all the testing steps
-          command: |
-            poetry run tox
+            - /home/circleci/project/.tox
 
   deployment:
     docker:
