--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,13 @@ workflows:
             branches:
               ignore: /.*/
 
+      - tag_describes_master:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
+
       - deployment:
           requires:
             - build
