--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ workflows:
       - deployment:
           requires:
             - build
-            - tag_describes_master
+            - tag_is_on_master
           filters:
               tags:
                 only: /v[0-9]+(\.[0-9]+)*/
