Don't even build if tag is not on master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,8 @@ workflows:
   deployment-workflow:
     jobs:
       - build:
+          requires:
+            - tag_is_on_master
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
