--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,7 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Lint
+    - name: Install
+      uses: abatilo/actions-poetry@v1.5.0
+      with:
+        python_version: 3.8
+        poetry_version: 1.0
+        args: install
+    - name: Lint with pre-commit
       uses: abatilo/actions-poetry@v1.5.0
       with:
         python_version: 3.8
