--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,15 +30,9 @@ jobs:
         python_version: 3.8
         poetry_version: 1.0
         args: install
-    - name: Lint
+    - name: Run matrix of tests with Tox
       uses: abatilo/actions-poetry@v1.5.0
       with:
         python_version: 3.8
         poetry_version: 1.0
-        args: run pre-commit run --all-files
-    - name: Run pytest
-      uses: abatilo/actions-poetry@v1.5.0
-      with:
-        python_version: 3.8
-        poetry_version: 1.0
-        args: run pytest
+        args: run tox
