--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,17 @@
+# https://tox.readthedocs.io/en/latest/example/basic.html#compressing-dependency-matrix
 [tox]
-envlist = pre-commit,py37
+envlist = py{37,38}-graphene{2,21}-pydantic{0,1}
 isolated_build = true
 
 [testenv]
 whitelist_externals = poetry
+deps =
+    graphene2: graphene>=2.0,<2.1
+    graphene21: graphene>=2.1,<3.0
+    pydantic0: pydantic>=0.26,<1.0
+    pydantic1: pydantic>=1.0,<2.0
+    pytest
+    pytest-cov
 commands =
-    poetry install -v
     pytest tests/ --cov-report=term-missing --cov=graphene_pydantic {posargs}
-    mypy --ignore-missing-imports --no-strict-optional -m graphene_pydantic
-    black --check graphene_pydantic
 
-[testenv:pre-commit]
-basepython = python3.7
-whitelist_externals = poetry
-commands =
-    poetry install -v
-    pre-commit {posargs:run --all-files}
