--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -5,18 +5,21 @@ jobs:
   linters:
     name: lint
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8]
     steps:
     - uses: actions/checkout@master
     - name: Install
       uses: abatilo/actions-poetry@v1.5.0
       with:
-        python_version: 3.8
+        python-version: ${{ matrix.python-version }}
         poetry_version: 1.0
         args: install
     - name: Lint with pre-commit
       uses: abatilo/actions-poetry@v1.5.0
       with:
-        python_version: 3.8
+        python-version: ${{ matrix.python-version }}
         poetry_version: 1.0
         args: run pre-commit run --all-files
   pytest:
@@ -27,12 +30,13 @@ jobs:
     - name: Install
       uses: abatilo/actions-poetry@v1.5.0
       with:
-        python_version: 3.8
+        python-version: ${{ matrix.python-version }}
         poetry_version: 1.0
         args: install
     - name: Run matrix of tests with Tox
       uses: abatilo/actions-poetry@v1.5.0
       with:
-        python_version: 3.8
+        python-version: ${{ matrix.python-version }}
         poetry_version: 1.0
         args: run tox
+
