--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ tox = "~3.12.0"  # sync with tox.ini
 mypy = "0.720"
 black = "19.3b0"
 pre-commit = "~1.17.0"
+tox-gh-actions = "^1.3.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
