--- a/tox.ini
+++ b/tox.ini
@@ -14,3 +14,8 @@ deps =
     pytest-cov
 commands =
     pytest tests/ --cov-report=term-missing --cov=graphene_pydantic {posargs}
+
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38, mypy
