Fix workflow YAML, poetry lock file

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,12 +22,12 @@ jobs:
     - name: Install
       uses: abatilo/actions-poetry@v1.5.0
       with:
-        python-version: ${{ matrix.python-version }}
+        python_version: ${{ matrix.python-version }}
         poetry_version: 1.0
         args: install
     - name: Run matrix of tests with Tox
       uses: abatilo/actions-poetry@v1.5.0
       with:
-        python-version: ${{ matrix.python-version }}
+        python_version: ${{ matrix.python-version }}
         poetry_version: 1.0
         args: run tox
