--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ keywords = ["api", "graphql", "protocol", "rest", "relay", "graphene", "pydantic
 [tool.poetry.dependencies]
 python = "^3.6"
 # To keep things simple, we only support newer versions of Graphene & Pydantic
-graphene = ">=2.1.3,<3"
+graphene = ">=3.0b5"
 pydantic = ">=1.0,<1.7"
 
 [tool.poetry.dev-dependencies]
