Attempt to add graphene v3 to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 # https://tox.readthedocs.io/en/latest/example/basic.html#compressing-dependency-matrix
 [tox]
-envlist = py{36,37,38}-graphene{20,21}-pydantic{1}
+envlist = py{36,37,38}-graphene{20,21,30}-pydantic{1}
 isolated_build = true
 
 [testenv]
 whitelist_externals = poetry
 deps =
+    graphene30: graphene>=3.0b5
     graphene20: graphene>=2.0,<2.1
     graphene21: graphene>=2.1,<3.0
     pydantic1: pydantic>=1.0,<2.0
