--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: actions/setup-python@v1
+    - uses: actions/setup-python@v2
       with:
         python-version: 3.8
     - uses: pre-commit/action@v2.0.0
@@ -15,19 +15,22 @@ jobs:
     name: pytest
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9, 'pypy-3.6', 'pypy-3.7']
+        poetry-version: [1.0, 1.1.6]
+        os: [ubuntu-20.04, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@master
     - name: Install
-      uses: abatilo/actions-poetry@v1.5.0
+      uses: abatilo/actions-poetry@v2
       with:
         python_version: ${{ matrix.python-version }}
-        poetry_version: 1.0
+        poetry_version: ${{ matrix.poetry-version }}
         args: install
     - name: Run matrix of tests with Tox
-      uses: abatilo/actions-poetry@v1.5.0
+      uses: abatilo/actions-poetry@v2
       with:
         python_version: ${{ matrix.python-version }}
-        poetry_version: 1.0
+        poetry_version: ${{ matrix.poetry-version }}
         args: run tox
