--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,7 +18,6 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9, 'pypy-3.6', 'pypy-3.7']
-        poetry-version: [1.0, 1.1.6]
         os: [ubuntu-20.04, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@master
@@ -26,11 +25,11 @@ jobs:
       uses: abatilo/actions-poetry@v2
       with:
         python_version: ${{ matrix.python-version }}
-        poetry_version: ${{ matrix.poetry-version }}
+        poetry_version: 1.1
         args: install
     - name: Run matrix of tests with Tox
       uses: abatilo/actions-poetry@v2
       with:
         python_version: ${{ matrix.python-version }}
-        poetry_version: ${{ matrix.poetry-version }}
+        poetry_version: 1.1
         args: run tox
