--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # https://tox.readthedocs.io/en/latest/example/basic.html#compressing-dependency-matrix
 [tox]
-envlist = py{36,37,38,39}-graphene{30}-pydantic{1}
+envlist = graphene{30}-pydantic{1}
 isolated_build = true
 
 [testenv]
@@ -17,4 +17,4 @@ commands =
 python =
     3.7: py37
     3.8: py38, mypy
-    3.8: py39
+    3.9: py39
