OK, PyPy won't work, sad

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
     pytest
     pytest-cov
 commands =
-    pytest tests/ --cov-report=term-missing --cov=graphene_pydantic {posargs}
+    pytest -v tests/ --cov-report=term-missing --cov=graphene_pydantic {posargs}
 
 [gh-actions]
 python =
