--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, 'pypy-3.6', 'pypy-3.7']
+        python-version: [3.6, 3.7, 3.8, 3.9]
         os: [ubuntu-20.04, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@master
