Add more Pydantic, Python versions to test matrix

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,15 @@
 # https://tox.readthedocs.io/en/latest/example/basic.html#compressing-dependency-matrix
 [tox]
-envlist = graphene{30}-pydantic{1}
+envlist = graphene{3}-pydantic{17,18,19}
 isolated_build = true
 
 [testenv]
 whitelist_externals = poetry
 deps =
-    graphene30: graphene>=3.0b5
-    pydantic1: pydantic>=1.0,<2.0
+    graphene30: graphene>=3.0b5,<4.0
+    pydantic17: pydantic==1.7
+    pydantic18: pydantic==1.8
+    pydantic19: pydantic==1.9
     pytest
     pytest-cov
 commands =
@@ -18,3 +20,4 @@ python =
     3.7: py37
     3.8: py38, mypy
     3.9: py39
+    3.10: py310
