Specific Python version constraints from upstream

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,10 @@ keywords = ["api", "graphql", "protocol", "rest", "relay", "graphene", "pydantic
 python = "^3.6"
 # To keep things simple, we only support newer versions of Graphene & Pydantic
 graphene = ">=3.0b5"
-pydantic = ">=1.0,<1.7"
+pydantic = [
+    { version = ">=1.0,<2.0", python = ">3.6,<3.10" },
+    { version = ">=1.9,<2.0", python = "~3.10" }
+]
 
 [tool.poetry.dev-dependencies]
 pytest = "~4.6.4"
