--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "graphene_pydantic"
-version = "0.2.0"
+version = "0.2.1"
 description = "Graphene Pydantic integration"
 readme = "README.md"
-repository = "https://github.com/upsidetravel/graphene-pydantic"
+repository = "https://github.com/graphql-python/graphene-pydantic"
 authors = [
   "Rami Chowdhury <rami@upside.com>"
 ]
@@ -16,6 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 keywords = ["api", "graphql", "protocol", "rest", "relay", "graphene", "pydantic", "model"]
