--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,16 +17,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', 'pypy-3.7', 'pypy-3.8']
+        python-version: ["3.7", "3.8", "3.9", "3.10", "pypy-3.7", "pypy-3.8"]
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-    - uses: actions/checkout@master
-    - uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Ensure poetry
-      uses: abatilo/actions-poetry@v2.1.2
-    - name: Install dependencies
-      run: poetry install
-    - name: Run matrix of tests with Tox
-      run: poetry run tox
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Ensure poetry
+        uses: abatilo/actions-poetry@v2.1.2
+      - name: Install dependencies
+        run: poetry install
+      - name: Run matrix of tests with Tox
+        run: poetry run tox -vvv
+      - name: Run pytest just in case Tox no worky
+        run: pytest -v tests/ --cov-report=term-missing --cov=graphene_pydantic
