Tweak poetry configs

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,12 @@
 # https://tox.readthedocs.io/en/latest/example/basic.html#compressing-dependency-matrix
 [tox]
-envlist = graphene{3}-pydantic{17,18,19}
-isolated_build = true
+# NOTE: Pydantic <1.9 does not support Python 3.10
+envlist = py{37,38,39}-graphene{30}-pydantic{17,18,19}, py310-graphene30-pydantic19
+skip_missing_interpreters = True
+# required if working with pyproject.toml
+isolated_build = True
+requires =
+    tox-poetry-dev-dependencies
 
 [testenv]
 whitelist_externals = poetry
