--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 [tox]
 # NOTE: Pydantic <1.9 does not support Python 3.10
 envlist = py{37,38,39}-graphene{30}-pydantic{17,18,19}, py310-graphene30-pydantic19
+# CI will supply any versions not available locally
 skip_missing_interpreters = True
 # required if working with pyproject.toml
 isolated_build = True
