--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -29,6 +29,4 @@ jobs:
       - name: Install dependencies
         run: poetry install
       - name: Run matrix of tests with Tox
-        run: poetry run tox -vvv
-      - name: Run pytest just in case Tox no worky
-        run: poetry run pytest -v tests/ --cov-report=term-missing --cov=graphene_pydantic
+        run: poetry run tox
