--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ requires =
 [testenv]
 whitelist_externals = poetry
 deps =
-    graphene30: graphene>=3.0b5,<4.0
+    graphene30: graphene>=3.0,<3.1
     pydantic17: pydantic==1.7
     pydantic18: pydantic==1.8
     pydantic19: pydantic==1.9
@@ -20,10 +20,3 @@ deps =
     pytest-cov
 commands =
     pytest -v tests/ --cov-report=term-missing --cov=graphene_pydantic {posargs}
-
-[gh-actions]
-python =
-    3.7: py37
-    3.8: py38, mypy
-    3.9: py39
-    3.10: py310
