--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,24 +22,21 @@ classifiers = [
 keywords = ["api", "graphql", "protocol", "rest", "relay", "graphene", "pydantic", "model"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 # To keep things simple, we only support newer versions of Graphene & Pydantic
-graphene = ">=3.0b5"
+graphene = "~=3.0"
 pydantic = [
     { version = ">=1.0,<2.0", python = ">3.6,<3.10" },
     { version = ">=1.9,<2.0", python = "~3.10" }
 ]
 
 [tool.poetry.dev-dependencies]
-pytest = "~4.6.4"
+pytest = "~6.2"
 pytest-cov = "~2.7.1"
 tox = "~3.12.0"  # sync with tox.ini
-mypy = "0.812"
-black = "20.8b1"
+mypy = "0.901"
+black = "21.12b0"
 pre-commit = "~1.17.0"
-tox-gh-actions = "^1.3.0"
-# https://github.com/python-poetry/poetry/issues/2386
-dataclasses = { version = "^0.6", python = "^3.6.1, <3.7" }
 
 [build-system]
 requires = ["poetry>=1.0"]
