--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ python = "^3.7"
 graphene = ">=2.1.8"
 pydantic = [
     { version = ">=1.0,<2.0", python = ">3.6,<3.10" },
-    { version = ">=1.9,<2.0", python = "~3.10" }
+    { version = ">=1.9,<2.0", python = ">=3.10" }
 ]
 
 [tool.poetry.dev-dependencies]
