--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pydantic = [
     { version = ">=1.0,<2.0", python = ">3.6,<3.10" },
     { version = ">=1.9,<2.0", python = "~3.10" }
 ]
+bson = "^0.5.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "~6.2"
