--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,26 +6,26 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - uses: pre-commit/action@v2.0.0
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
+      - uses: pre-commit/action@v2
   pytest:
     name: pytest
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
       - name: Ensure poetry
-        uses: abatilo/actions-poetry@v2.1.2
+        uses: abatilo/actions-poetry@v2
       - name: Install dependencies
         run: poetry install
       - name: Run matrix of tests with Tox
