--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,10 +34,13 @@ pydantic = [
 pytest = "~6.2"
 pytest-cov = "~2.7.1"
 tox = "~3.12.0"  # sync with tox.ini
-mypy = "0.901"
-black = "21.12b0"
+mypy = "1.4.1"
+black = "23.3"
 pre-commit = "~1.17.0"
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.4.1"
+
 [build-system]
-requires = ["poetry>=1.0"]
+requires = ["poetry>=1.5"]
 build-backend = "poetry.masonry.api"
