--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,7 +11,7 @@ jobs:
         with:
           python-version: 3.10
       - uses: pre-commit/action@v2
-  pytest:
+  tests:
     name: pytest
     runs-on: ubuntu-latest
     strategy:
@@ -26,7 +26,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Ensure poetry
         uses: abatilo/actions-poetry@v2
-      - name: Install dependencies
-        run: poetry install
-      - name: Run matrix of tests with Tox
-        run: poetry run tox
+      - uses: wntrblm/nox
+      - name: Run matrix of tests
+        run: nox
