--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "Graphene Pydantic integration"
 readme = "README.md"
 repository = "https://github.com/graphql-python/graphene-pydantic"
 authors = [
-  "Rami Chowdhury <rami@upside.com>"
+  "Rami Chowdhury <rami.chowdhury@gmail.com>",
+  "Dan Riggs <danielriggs@gmail.com>",
 ]
 license = "Apache-2.0"
 classifiers = [
@@ -23,23 +24,18 @@ keywords = ["api", "graphql", "protocol", "rest", "relay", "graphene", "pydantic
 
 [tool.poetry.dependencies]
 python = "^3.7"
-# To keep things simple, we only support newer versions of Graphene & Pydantic
-graphene = ">=2.1.8"
+graphene = ">=3.0"
 pydantic = [
-    { version = ">=1.0,<2.0", python = ">3.6,<3.10" },
+    { version = ">=1.0,<2.0", python = ">3.6,<3.12" },
     { version = ">=1.9,<2.0", python = ">=3.10" }
 ]
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "~6.2"
 pytest-cov = "~2.7.1"
-tox = "~3.12.0"  # sync with tox.ini
-mypy = "1.4.1"
+mypy = "^1.4.1"
 black = "23.3"
 pre-commit = "~1.17.0"
-
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.4.1"
 
 [build-system]
 requires = ["poetry>=1.5"]
