--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,7 +10,10 @@ jobs:
     - uses: actions/setup-python@v3
       with:
         python-version: "3.11"
-    - uses: pre-commit/action@v3.0.0
+    - name: pre-commit
+      run: |
+        python -m pip install pre-commit
+        pre-commit run --show-diff-on-failure --all-files
   pytest:
     name: pytest
     runs-on: ubuntu-latest
