--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,7 @@
-default_language_version:
-  python: python3.10
 fail_fast: true
 repos:
-  - repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.0.0
     hooks:
       - id: check-merge-conflict
       - id: check-yaml
