--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,14 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.10"
       - name: pre-commit
         run: |
           python -m pip install pre-commit
           pre-commit run --show-diff-on-failure --all-files
-  pytest:
+  tests:
     name: pytest
     runs-on: ubuntu-latest
     strategy:
@@ -27,8 +27,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Ensure poetry
-        uses: abatilo/actions-poetry@v2
+      - uses: abatilo/actions-poetry@v2
       - uses: wntrblm/nox@2023.04.22
       - name: Run matrix of tests
-        run: nox --no-venv --non-interactive --python ${{ matrix.python-version }}
+        run: nox --no-venv --non-interactive --python python
