--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -28,4 +28,5 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - uses: abatilo/actions-poetry@v2
+      - run: poetry install
       - run: poetry run nox -r --non-interactive --python=python
