--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,10 +10,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: pre-commit
-        run: |
-          python -m pip install pre-commit
-          pre-commit run --show-diff-on-failure --all-files
+      - uses: pre-commit/action@v3.0.0
   tests:
     name: pytest
     runs-on: ubuntu-latest
