--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,13 +10,16 @@ repos:
         exclude: ^docs/.*$
       - id: trailing-whitespace
         exclude: README.md
+  - repo: https://github.com/pycqa/flake8
+    rev: "6.1.0"
+    hooks:
       - id: flake8
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.812
+    rev: v1.4.1
     hooks:
       - id: mypy
         args: [--ignore-missing-imports, --no-strict-optional]
-  - repo: https://github.com/python/black
-    rev: 20.8b1
+  - repo: https://github.com/psf/black
+    rev: 23.7.0
     hooks:
       - id: black
