--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,11 +26,8 @@ keywords = ["api", "graphql", "protocol", "rest", "relay", "graphene", "pydantic
 [tool.poetry.dependencies]
 python = "^3.7"
 graphene = ">=2.1.8"
-pydantic = [
-    { version = ">=1.0,<2.0", python = ">3.6,<3.12" },
-    { version = ">=1.9,<2.0", python = ">=3.10" }
-]
 bson = "^0.5.10"
+pydantic = ">=2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "~6.2"
